aptos-move/flow/src/tests/edit_hook/parse_error.exp
error[E01002]: unexpected token
  ┌─ parse_error.move:3:1
  │
3 │
  │ ^
  │
  │ Unexpected end-of-file
  │ Expected ';'
